--- a/site/templates/home.html
+++ b/site/templates/home.html
@@ -1,3 +1,8 @@
+<div class="search-header"
+     ng-show="homeCtrl.isSearchHeaderVisible()">
+  Congress.Gripe
+</div>
+
 <div class="search-card mdl-card mdl-shadow--2dp"
      ng-class="homeCtrl.getSearchCardClass()">
 
