Gracefully handle members who don't have any contact information

--- a/site/templates/directives/member_card.html
+++ b/site/templates/directives/member_card.html
@@ -21,11 +21,13 @@
       </div>
     </div>
 
-    <div class="member-card__or">
+    <div class="member-card__or"
+         ng-if="memberCardCtrl.hasContactItems()">
       or
     </div>
 
-    <ul class="mdl-list member-card__contact-list">
+    <ul class="mdl-list member-card__contact-list"
+        ng-if="memberCardCtrl.hasContactItems()">
       <member-card-contact-item href="memberCardCtrl.member().extra.contact_form"
                                 icon="mail"
                                 text="Contact by Email">
