Update the example search

--- a/site/templates/home.html
+++ b/site/templates/home.html
@@ -51,9 +51,9 @@
 
         <li>
           A Name
-          <a href="/?q=Paul+Ryan"
+          <a href="/?q=Ryan"
             ng-click="homeCtrl.handleSearchLink()">
-            e.g. Paul Ryan »
+            e.g. Ryan »
           </a>
         </li>
       </ul>
