Clean up the search text a little bit.

--- a/site/stylesheets/common.css
+++ b/site/stylesheets/common.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Kadwa:700|Ultra');
+@import url('https://fonts.googleapis.com/css?family=Kadwa|Ultra');
 
 .site-header {
   background: #0776a9;
