--- a/site/stylesheets/search-card.css
+++ b/site/stylesheets/search-card.css
@@ -13,6 +13,7 @@
   color: #015d88;
   font-family: 'Kadwa', serif;
   font-size: 28px;
+  font-weight: 700;
   margin: 0;
   margin-top: -14px;
   text-align: center;
@@ -174,7 +175,7 @@
 }
 
 .search-help__title-text {
-  color: #888;
+  color: #999;
   font-family: 'Kadwa', serif;
   margin: 10px 10px 10px 20px;
 }
