--- a/site/templates/home.html
+++ b/site/templates/home.html
@@ -97,6 +97,12 @@
     Still searching. Full addresses can take a little longer to search for.
   </div>
 
+  <div class="search-card__slow-search-header"
+       ng-show="homeCtrl.isVerySlowSearchHeaderVisible()">
+    <i class="material-icons">cached</i>
+    Your search is taking a very long time. You may want to try another search.
+  </div>
+
   <div class="search-card__search-results-header"
        ng-show="homeCtrl.isCurrentSearchForState()">
     <a href="{{homeCtrl.getStateUrl()}}">
